<resources>
    <string name="bottom_menu_station">Радиостанции</string>
    <string name="bottom_menu_player">Плеер</string>
    <string name="bottom_menu_more">Еще</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_broadcast">On Air</string>
    <string name="message_in_std">Сообщение в студию</string>
    <string name="cities">Города</string>
    <string name="newses">Новости</string>
    <string name="tickets">Билеты</string>
    <string name="contacts">Контакты</string>
    <string name="bag_report">Сообщить о проблеме</string>
    <string name="shared">Поделиться приложением</string>
    <string name="station_name_def">Radio Online</string>
    <string name="track_history">история эфира</string>
    <string name="history">Плейлист »</string>
    <string name="estimate_hameleon_radio">Оценить Hameleon Radio</string>
    <string name="subtitle_estimate_hameleon_radio">Если вам нравится Hameleon Radio, не могли бы его оценить? Это займет лишь минуту. Благодарим за поддержку</string>
    <string name="recall_later">Напомнить позже</string>
    <string name="no_th">Нет, спасибо</string>
    <string name="close">Закрыть</string>
    <string name="what_new_description">Изображение нового функционала</string>
</resources>
