<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_station"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_station"
        android:icon="@drawable/ic_bottom_list"/>

    <item
        android:id="@+id/navigation_player"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_player"
        android:icon="@drawable/ic_bottom_note"/>

    <item
        android:id="@+id/navigation_more"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_more"
        android:icon="@drawable/ic_bottom_more"/>
</menu>