<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/estimate_dialog_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/estimate_hameleon_radio"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#272727"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/subtitle_estimate_hameleon_radio"
        android:textAlignment="center"
        android:textColor="#252628"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/bottomIconColor" />

    <Button
        android:id="@+id/button1"
        style="@style/DialogButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimate_hameleon_radio" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bottomIconColor" />

    <Button
        android:id="@+id/button2"
        style="@style/DialogButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recall_later" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bottomIconColor" />

    <Button
        android:id="@+id/button3"
        style="@style/DialogButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_th" />
</LinearLayout>